--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.0",
     "react-tiny-link": "^3.6.1",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
