--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "bookmark_manager",
+  "name": "bookmark-handle",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/react-router": "^5.1.20",
     "history": "^5.3.0",
     "lodash.debounce": "^4.0.8",
-    "lodash.throttle": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.0",
-    "react-tiny-link": "^3.6.1",
+    "react-router-dom": "^6.6.2",
+    "sass": "^1.57.1",
     "scss": "^0.2.4",
     "vite-plugin-svgr": "^2.4.0"
   },
@@ -23,7 +24,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "sass": "^1.57.1",
+    "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
 }
